Actions
Bug #12779
closedmdb str_flags is missing STRXPG4TTY
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
12306 XPG4v2 slave pty behaviour should generally be disabled
added a new flag to sys/strsubr.h
but forgot to update the corresponding table in mdb
Related issues
Updated by Andy Fiddaman almost 2 years ago
- Related to Bug #12306: XPG4v2 slave pty behaviour should generally be disabled added
Updated by Electric Monk almost 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 88d6421c15f1c4daea9c8128e715662091258054
commit 88d6421c15f1c4daea9c8128e715662091258054 Author: Andy Fiddaman <omnios@citrus-it.co.uk> Date: 2020-05-22T18:16:43.000Z 12779 mdb str_flags is missing STRXPG4TTY Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions